css fix on mobile

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -10,6 +10,7 @@
     height: 300px;
     object-fit: cover;
 } */
+
 main.pageWrapper > section#projects {
     margin: 100px 0 !important;
     height: 300px;
@@ -221,6 +222,10 @@ section#blog .articles .swiper {
 }
 
 @media only screen and (max-width: 770px) {
+    .main.pageWrapper {
+        overflow-x: hidden;
+        overflow-y: visible;
+    }
     #hero > #Layer_2 {
         width: 400px;
         height: 150px;
